--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "Translates lyrics of currently playing Spotify tracks into multiple languages",
   "permissions": ["identity", "storage", "activeTab"],
-  "host_permissions": ["https://api.spotify.com/*"],
+  "host_permissions": ["https://api.spotify.com/*", "http://localhost:3000/*"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -21,5 +21,6 @@
     "16": "assets/ext-icon.png",
     "24": "assets/ext-icon.png",
     "32": "assets/ext-icon.png"
-  }
+  },
+  "key": "fmdbdnmcdlpacbffnoeklnhnonchbanm"
 }
