spotify authentication and redirect to spotify tab

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Spotify Lyrics Translator",
   "version": "1.0.0",
   "description": "Translates lyrics of currently playing Spotify tracks into multiple languages",
-  "permissions": ["identity", "storage", "activeTab"],
+  "permissions": ["identity", "storage", "activeTab", "tabs"],
   "host_permissions": ["https://api.spotify.com/*", "http://localhost:3000/*"],
   "action": {
     "default_popup": "popup.html",
@@ -22,5 +22,5 @@
     "24": "assets/ext-icon.png",
     "32": "assets/ext-icon.png"
   },
-  "key": "fmdbdnmcdlpacbffnoeklnhnonchbanm"
+  "key": "nnkekmfciajaipllgmpieoccgenjcplg"
 }
