get lyrics from scraping genius

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Spotify Lyrics Translator",
   "version": "1.0.0",
   "description": "Translates lyrics of currently playing Spotify tracks into multiple languages",
-  "permissions": ["identity", "storage", "activeTab", "tabs"],
+  "permissions": ["identity", "storage", "activeTab", "tabs", "scripting"],
   "host_permissions": ["https://api.spotify.com/*", "http://localhost:3000/*"],
   "action": {
     "default_popup": "popup.html",
