--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "dev": "npx nodemon server.js"
   },
   "dependencies": {
+    "@google-cloud/translate": "^7.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
