--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "puppeteer": "^24.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
