--- a/api/package.json
+++ b/api/package.json
@@ -5,13 +5,15 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "npx nodemon server.js"
+    "start": "node index.js",
+    "dev": "npx nodemon index.js",
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^8.0.0",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
