--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,11 +4,7 @@
   "version": "1.0.0",
   "description": "Translates lyrics of currently playing Spotify tracks into multiple languages",
   "permissions": ["identity", "storage", "activeTab", "tabs", "scripting"],
-  "host_permissions": [
-    "https://api.spotify.com/*",
-    "http://localhost:3000/*",
-    "https://open.spotify.com/*"
-  ],
+  "host_permissions": ["https://open.spotify.com/*"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
